--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-merge",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "function that merge 2 (or more) objects in a react-way",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha __tests__"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,20 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.2.2",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.3",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "chai": "^4.3.10",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "mocha": "^10.2.0",
     "sleep-promise": "^9.1.0",
-    "ts-mocha": "^8.0.0",
-    "typescript": "^4.3.5"
+    "ts-mocha": "^10.0.0",
+    "typescript": "^5.3.3"
   }
 }
